--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio
+.vs
+
+# Project
+!Debug/*.dll
+BaseAppOpenGL/Debug
+BaseAppOpenGL/Release
+BaseAppOpenGl/*.txt
